--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,11 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+logging.level.org.springframework.security=DEBUG
+
+#spring_security
+#form based authentication
+#spring.security.user.name=rajnish
+#spring.security.user.password=rajnish
+#spring.security.user.roles=ADMIN
 
