--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.web.resources.add-mappings=false
 
 logging.level.org.springframework.security=DEBUG
 
+spring.main.allow-circular-references=true
+
 #spring_security
 #form based authentication
 #spring.security.user.name=rajnish
